--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Liking Posts</h1>
+<ul>
+<% @posts.each do |post|%>
+  <li><%= link_to post.title, post_path(post)%></li>
+<%end%>
+</ul>
+<hr>
+<p><%=link_to "Add Post", new_post_path%></p>
