--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,26 @@
 <h1>Liking Posts</h1>
-<ul>
-<% @posts.each do |post|%>
-  <li><%= link_to post.title, post_path(post)%></li>
-<%end%>
-</ul>
-<hr>
-<p><%=link_to "Add Post", new_post_path%></p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <%@posts.each do |post|%>
+      <tr>
+        <td><%= post.title%></td>
+        <td><%= post.body%></td>
+        <td><%= link_to 'Show', post%></td>
+        <td><%= link_to 'Edit', edit_post_path(post)%></td>
+        <td><%= link_to 'Destroy', post, method: :delete, data:{confirm: 'Are you sure?'} %></td>
+      </tr>
+    <%end%>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Post', new_post_path%>
